# pixel-fix

./: .gitignore  AGENTS.md  AUTOMATION_BUG_REPORT_2026-03-15.md  BUG_REPORT_2026-03-09.md  BUG_REPORT_2026-03-09_push_6b380046.md  BUG_REPORT_2026-03-09_push_d24f8964.md  BUG_REPORT_2026-03-11_push_55c7d15.md  BUG_REPORT_2026-03-11_push_8596bff2.md  BUG_REPORT_2026-03-11_push_f2d7e383.md  BUG_REPORT_2026-03-12_push_4edd603a.md  BUG_REPORT_2026-03-12_push_802bbcf2.md  BUG_REPORT_2026-03-13.md  BUG_REPORT_2026-03-13_push_158c40c8.md  BUG_REPORT_2026-03-14_push_13c3c9b7.md  BUG_REPORT_2026-03-15.md  LICENSE  README.md  progress.md  pyproject.toml
.codex/environments/: environment.toml
docs/: developer-notes.md  implementation-plan.md
palettes/: default.gpl  mega-drive-blue.gpl  super16.gpl
palettes/Curated/Other/: island-joy-16.gpl  vinik24.gpl
palettes/Minimal/: paperback-2.gpl
reports/: 2026-03-13-push-code-quality-report.md
scripts/: build_windows_exe.ps1  generate_windows_icon.py  pyinstaller_gui_entry.py
src/pixel_fix/: __init__.py  cli.py  cli_workflow.py  io.py  pipeline.py  resample.py  types.py
src/pixel_fix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: metrics.py  test_cleanup.py  test_cli.py  test_csea_e2e.py  test_grid_scoring.py  test_gui_builtin_palettes.py  test_gui_persist.py  test_gui_processing.py  test_gui_state.py  test_gui_zoom.py  test_palette_catalog.py  test_palette_features.py  test_pipeline.py  test_pipeline_color_features.py
tests/fixtures/: grid_sprite_fixture.json  outline_sprite_fixture.json
(+32 files in other folders)
